// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePaginationReducer reducer should handle TASKS_TABLE_PENDING 1`] = `
Object {
  "tasksTableQuery": Object {
    "itemCount": 0,
    "loading": true,
    "pagination": Object {
      "page": 1,
      "perPage": 20,
    },
    "query": null,
  },
}
`;

exports[`TasksTablePaginationReducer reducer should handle TASKS_TABLE_SUCCESS 1`] = `
Object {
  "tasksTableQuery": Object {
    "itemCount": 120,
    "loading": false,
    "pagination": Object {
      "page": 3,
      "perPage": 12,
    },
    "query": null,
  },
}
`;

exports[`TasksTablePaginationReducer reducer should return the initial state 1`] = `
Object {
  "tasksTableQuery": Object {
    "itemCount": 0,
    "loading": true,
    "pagination": Object {
      "page": 1,
      "perPage": 20,
    },
    "query": null,
  },
}
`;
